# problems

./: .gitignore  CMakeLists.txt  main.cpp
codewars/: are_they_the_same.c  bagels.cs  bit_counting.cpp  case_sensitive.cpp  consecutive_strings.cs  create_phone_number.cs  descending_order.cs  find_all_occurences_of_an_element_in_an_array.c  fun_with_trees_array_to_tree.cs  functions_of_integers_on_cartesian_plane.c  get_the_middle_character.cs  greed_is_good.cs  human_readable_duration_format.cs  int32_to_ipv4.cpp  product_of_consecutive_fib_numbers.cs  rgb_to_hex_conversion.cs  scramblies.cs  shortest_word.c  sum_of_odd_numbers.cs
codewars/4kyu/: a_simplistic_tcp_finite_state_machine.cs  codewars_style_ranking_system.cs  path_finder1_can_you_reach_the_exit.cs  simplexer.cs
codewars/5kyu/: alll_that_is_open_must_be_closed.cs  beeramid.cpp  common_denominators.cs  convert_pascal_case_to_snake_case.cs  domain_name_validator.cs  emirps.cs  event_and_delegate.cs  first_non_repeating_character.cs  int32_to_ipv4.cpp  mean_square_error.cs  pete_the_baker.cpp  poker_cards_encoder_decoder.cs  relational-division-ind-all-movies-two-actors-cast-in-together.sql  rot13.cs  simple_pig_latin.cs  sql-statistics-min-median-max.sql  sql_basics_simple_view.sql  tic_tac_toe_checker.cs  weight_for_weight.cs
codewars/6kyu/: bouncing_balls.cs  convert_string_to_camel_case.cpp  count_the_smiley_faces.cs  counting-duplicates.cs  delete_occurences_of_an_element_if_it_occurs_more_than_n_times.cs  detect_pangram.cpp  duplicate_encoder.cs  find_the_mine.cs  find_the_missing_letter.cs  find_the_parity_outlier.cpp  find_the_unique_number.cpp  fun_with_lists_map.cs  genetic_algorithm_series_5_roulette_wheel_selection.cs  highest_scoring_word.cs  matrix_addition.cpp  mexican_wave.cs  mini_string_fuck.cpp  most_common_word_in_team_retrospectives.sql  one_house_many_claims_detect_duplicate_address_application.sql  playing_with_digits.cpp  replace_with_alpabet_position.cs  sql_basics_simple_having.sql  sql_basics_simple_null_handling.sql  sql_basics_simple_union_all.sql  sql_bug_fixing_fix_the_query_totaling.sql  tdd_area_calculations.cs  who_likes_it.cs
codewars/7kyu/: diagonals_sum.c  exes_and_ohs.cpp  reverse_words.cs
codewars/8kyu/: dna_to_rna_conversion.cs
leetcode/: 100_same_tree.cpp  1051_height_checker.cs  1232_check_if_it_is_a_straight_line.cs  1275_find_numbers_with_even_number_of_digits.cpp  1346_check_if_n_and_its_double_exist.cs  136_single_number.cpp  137_single_number_ii.cpp  1493_longest_subarray_of1s_after_deleting_one_element.cs  1523_count_odd_numbers_in_an_interval_range.cpp  153_find_minimum_in_rotated_sorted_array.cs  1550_three_consecutive_odds.cs  1572_matrix_diagonal_sum.cs  169_majority_element.java  1822_sign_of_the_product_of_an_array.cpp  189_rotate_array.cpp  205_isomorphic_strings.cs  206_reverse_linked_list.cs  228_summary_ranges.cs  27_remove_element.cs  290_word_pattern.cs  3127_make_a_square_with_the_same_color.cs  3217_delete_nodes_from_linked_list_present_in_array.cs  3232_find_if_digit_game_can_be_won.cpp  344_reverse_string.cpp  349_intersection_of_two_arrays.cs  3536_maximum_product_of_two_digits.cs  3637_trionic_array_i.cs  387_first_unique_character_in_a_string.cs  389_find_the_difference.cpp  412_fizz_buzz.cs  414_third_maximum_number.cpp  448_find_all_numbers_disappeared_in_an_array.cpp  485_max_consecutive_ones.java  496_next_greater_element_i.cs  561_array_partition.cpp  58_length_of_last_word.cpp  645_set_mismatch.cs  693_binary_number_with_alternating_bits.cs  704_binary_search.cs  748_shortest_completing_word.cs  (+6 more)
