cmake_minimum_required(VERSION 3.31)
project(untitled4)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled4 main.cpp
        leetcode/448_find_all_numbers_disappeared_in_an_array.cpp
        leetcode/344_reverse_string.cpp
        codewars/bit_counting.cpp
        codewars/playing_with_digits.cpp
        codewars/functions_of_integers_on_cartesian_plane.c
        codewars/find_all_occurences_of_an_element_in_an_array.c
        codewars/case_sensitive.cpp
        codewars/detect_pangram.cpp
        codewars/int32_to_ipv4.cpp
        codewars/matrix_addition.cpp
        codewars/find_the_unique_number.cpp
        codewars/find_the_parity_outlier.cpp
        leetcode/136_single_number.cpp
        leetcode/137_single_number_ii.cpp
        leetcode/189_rotate_array.cpp
        codewars/are_they_the_same.c
        leetcode/414_third_maximum_number.cpp
        leetcode/58_length_of_last_word.cpp
        leetcode/561_array_partition.cpp
        leetcode/762_prime_number_of_set_bits_in_binary_representation.cpp
        leetcode/3232_find_if_digit_game_can_be_won.cpp
        leetcode/1822_sign_of_the_product_of_an_array.cpp
        leetcode/860_lemonade_change.cpp
        leetcode/989_add_to_array_form_of_integer.cpp
        leetcode/283_move_zeroes.cpp
        leetcode/819_most_common_word.cpp
        leetcode/2390_removing_stars_from_a_string.cpp
        leetcode/94_binary_tree_inorder_traversal.cpp
        leetcode/102_binary_tree_level_order_traversal.cpp
        leetcode/104_maximum_depth_of_binary_tree.cpp
        leetcode/3217_delete_nodes_from_linked_list_present_in_array.cpp
        leetcode/1290_convert_binary_number_in_a_linked_list_to_integer.cpp
        leetcode/876_middle_of_the_linked_list.cpp
        leetcode/83_remove_duplicates_from_sorted_list.cpp
        leetcode/21_merge_two_sorted_lists.cpp
        leetcode/206_reverse_linked_list.cpp
        leetcode/1768_merge_strings_alternately.cpp
        leetcode/7_reverse_integer.cpp
        leetcode/1572_matrix_diagonal_sum.cpp
        leetcode/976_largest_perimeter_triangle.cpp
        leetcode/1275_find_winner_on_a_tic_tac_toe_game.cpp
        leetcode/868_binary_gap.cpp
        codewars/pete_the_baker.cpp
        codewars/maximum_subarray_sum.cpp
        codewars/duplicate_encoder.cpp
        codewars/convert_string_to_camel_case.cpp
        codewars/create_phone_number.cs
        codewars/highest_scoring_word.cpp
        codewars/mini_string_fuck.cpp
        codewars/string_incrementer.cpp
)
