cmake_minimum_required(VERSION 3.31)
project(untitled4)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled4 main.cpp
        leetcode/448_find_all_numbers_disappeared_in_an_array.cpp
        leetcode/344_reverse_string.cpp
        codewars/6kyu/bit_counting.cpp
        codewars/6kyu/playing_with_digits.cpp
        codewars/7kyu/functions_of_integers_on_cartesian_plane.c
        codewars/7kyu/find_all_occurences_of_an_element_in_an_array.c
        codewars/7kyu/case_sensitive.cpp
        codewars/6kyu/detect_pangram.cpp
        codewars/5kyu/int32_to_ipv4.cpp
        codewars/6kyu/matrix_addition.cpp
        codewars/6kyu/find_the_unique_number.cpp
        codewars/6kyu/find_the_parity_outlier.cpp
        leetcode/136_single_number.cpp
        leetcode/137_single_number_ii.cpp
        leetcode/189_rotate_array.cpp
        codewars/6kyu/are_they_the_same.c
        leetcode/414_third_maximum_number.cpp
        leetcode/58_length_of_last_word.cpp
        leetcode/561_array_partition.cpp
        leetcode/762_prime_number_of_set_bits_in_binary_representation.cpp
        leetcode/3232_find_if_digit_game_can_be_won.cpp
        leetcode/1822_sign_of_the_product_of_an_array.cpp
        leetcode/860_lemonade_change.cpp
        codewars/5kyu/pete_the_baker.cpp
        codewars/6kyu/convert_string_to_camel_case.cpp
        codewars/6kyu/create_phone_number.cs
        codewars/6kyu/mini_string_fuck.cpp
        codewars/7kyu/shortest_word.c
        codewars/7kyu/diagonals_sum.c
        codewars/5kyu/beeramid.cpp
        codewars/7kyu/exes_and_ohs.cpp
)
